# treee

./: .treee-ignore  README.md  pyproject.toml
src/treee/: tree.py
